# RichardsSolver

./: LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py  test1.py
LowerMurrumbidgee/: extract_data.py  lower_murrumbidgee.py
RichardsSolver/: ProblemDefinition.py  RichardsSolver.py  __init__.py  equations.py  modelTypes.py  richards_equation.py  richards_solver.py  timeStepper.py  utilities.py
demos/OneDimension/: Celia1.py  Celia2.py  test1.mat  test2.mat  test2.py
demos/ThreeDimensions/: cockett.py  test4.py
demos/TwoDimensions/: README.md  TracySolution.py  multiMaterial.py  test3.py  tracy.py  vauclin.py
tests/: test_mass_balance.py  test_tracy_2d.py  test_tracy_3d.py  test_vauclin.py
